<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:scrollbars="none"
    android:scrollbarStyle="insideInset"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    android:background="@color/screen_background">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:id="@+id/project_story_image_card"
        android:layout_width="200dp"
        android:layout_height="200dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVertical_chainStyle="packed"
        android:layout_marginTop="10dp"
        >

        <ImageView
            android:id="@+id/project_story_image"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:background="@drawable/upload_a_pic"
            android:scaleType="centerCrop"
            android:adjustViewBounds="true"
            android:layout_gravity="center"
            android:contentDescription="@string/project_image"
            />

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/select_project"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/select_my_project"
        android:textSize="16sp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@id/project_story_image_card"
        app:layout_constraintStart_toStartOf="parent"
        />
    <Spinner
        android:id="@+id/select_project_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:layout_constraintTop_toBottomOf="@id/select_project"
        app:layout_constraintStart_toStartOf="parent"
        />
    <View
        android:id="@+id/select_project_underline"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@android:color/darker_gray"
        app:layout_constraintTop_toBottomOf="@id/select_project_spinner"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="5dp"
        android:layout_marginStart="18dp"
        android:layout_marginEnd="42dp"/>

    <TextView
        android:id="@+id/select_caption"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/select_caption"
        android:textSize="16sp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@id/select_project_underline"
        app:layout_constraintStart_toStartOf="parent"
        />
    <Spinner
        android:id="@+id/select_caption_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:layout_constraintTop_toBottomOf="@id/select_caption"
        app:layout_constraintStart_toStartOf="parent"
        />
    <View
        android:id="@+id/select_caption_underline"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@android:color/darker_gray"
        app:layout_constraintTop_toBottomOf="@id/select_caption_spinner"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="5dp"
        android:layout_marginStart="18dp"
        android:layout_marginEnd="42dp"/>
    <Button
        android:id="@+id/project_submit"
        android:layout_width="100dp"
        android:layout_height="60dp"
        android:text="@string/submit"
        android:textColor="@color/screen_background"
        android:background="@color/colorPrimary"
        app:layout_constraintTop_toTopOf="@id/select_caption_underline"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVertical_bias="0.7"
        />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>