<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_bg"
    tools:context=".LoginActivity">

    <ImageView
        android:layout_width="205dp"
        android:layout_height="66dp"
        android:layout_marginTop="60dp"
        android:src="@drawable/login_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/usernameEt"
        android:layout_width="302dp"
        android:layout_height="52dp"
        android:background="@drawable/border_rect"
        android:drawableStart="@drawable/ic_username_asset"
        android:drawableLeft="@drawable/ic_username_asset"
        android:drawablePadding="10dp"
        android:hint="@string/enter_username"
        android:inputType="text"
        android:maxLines="1"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.659" />

    <EditText
        android:id="@+id/pswdEt"
        android:layout_width="302dp"
        android:layout_height="52dp"
        android:background="@drawable/border_rect"
        android:drawableStart="@drawable/ic_pswd_asset"
        android:drawableLeft="@drawable/ic_pswd_asset"
        android:drawablePadding="10dp"
        android:hint="@string/enter_password"
        android:inputType="textPassword"
        android:maxLines="1"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.764" />

    <TextView
        android:id="@+id/newReg"
        android:layout_width="241dp"
        android:layout_height="28dp"
        android:text="@string/to_new_reg"
        android:textAlignment="center"
        android:textColor="#FDFDFD"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/pswdEt"
        app:layout_constraintVertical_bias="0.814" />

    <ImageButton
        android:layout_width="136dp"
        android:layout_height="58dp"
        android:layout_marginBottom="16dp"
        android:onClick="toRegistraction"
        android:background="@drawable/border_circle"
        android:src="@drawable/ic_arrow_forward"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.98"
        app:layout_constraintLeft_toRightOf="@id/newReg"
        app:layout_constraintRight_toRightOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>