<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/screen_background"
    tools:context=".postLogin.unconfirmed_funds.UploadRecieptActivity">

    <androidx.cardview.widget.CardView
        android:id="@+id/reciept_image_cardview"
        android:layout_width="80dp"
        android:layout_height="80dp"
        app:cardCornerRadius="40dp"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintVertical_chainStyle="packed"
        >

        <ImageView
            android:id="@+id/reciept_project_image"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/ic_person_outline"
            android:scaleType="centerCrop"
            android:adjustViewBounds="true"
            android:layout_gravity="center"
            />

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/reciept_project_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@id/reciept_image_cardview"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        />
    <TextView
        android:id="@+id/reciept_sent_amount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fund_sent_amount"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/reciept_project_date"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>
    <TextView
        android:id="@+id/reciept_amount_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginTop="5dp"
        app:layout_constraintTop_toBottomOf="@id/reciept_sent_amount"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        />
    <TextView
        android:id="@+id/enter_amount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter_amount_received"
        android:textSize="20sp"
        android:layout_marginTop="50dp"
        android:layout_marginStart="10dp"
        app:layout_constraintTop_toBottomOf="@id/reciept_amount_tv"
        app:layout_constraintStart_toStartOf="parent"
        />
    <EditText
        android:id="@+id/reciept_enter_amount"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:textSize="16sp"
        android:textStyle="bold"
        android:inputType="number"
        android:drawableStart="@drawable/ic_attach_money_black_24dp"
        android:paddingStart="10dp"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/enter_amount"
        />
    <androidx.cardview.widget.CardView
        android:id="@+id/project_story_image_card"
        android:layout_width="300dp"
        android:layout_height="200dp"
        app:layout_constraintTop_toBottomOf="@id/reciept_enter_amount"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVertical_chainStyle="packed"
        android:layout_marginTop="20dp"
        >

        <ImageView
            android:id="@+id/upload_reciept_image"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:background="@drawable/upload_a_pic"
            android:scaleType="centerCrop"
            android:adjustViewBounds="true"
            android:layout_gravity="center"
            android:contentDescription="@string/project_image"
            />

    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/reciept_submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/submit"
        android:textColor="@color/screen_background"
        android:background="@color/colorPrimaryDark"
        android:onClick="returnToFundActivity"
        app:layout_constraintVertical_bias="0.9"
        app:layout_constraintBottom_toBottomOf="parent"/>


</androidx.constraintlayout.widget.ConstraintLayout>